# livechat_bot

./: .flake8  .gitignore  DEPLOYMENT_READY.md  PREMIUM_BUTTON_UPDATE_REPORT.md  README.md  bot.py  check_and_fix_user.sql  check_user_diagnostic.py  clean_metrics.py  clear_user_cache.py  config.py  cron setting.txt  db.py  ddl.sql  diagnose_and_fix_user.sql  downgrade_user_complete.sql  downgrade_user_to_free.sql  pyproject.toml  quick_fix_user.sql  requirements-dev.txt  requirements.txt  stop_list.py  update_gender_default.sql  update_language_default.sql  update_user_premium.sql  update_user_premium_fixed_date.sql
.github/workflows/: deploy.yaml
app/: OPTIMIZED_MESSAGE_COUNTER.md  bot.py  ddl.sql  main.py  test.py  test_fsm_performance.py
app/config/: database.py  openai.py  telegram.py  validator.py
app/core/: __init__.py  cqrs.py  database.py  di_container.py  event_bus.py  exceptions.py  factories.py  middleware.py  specifications.py  unit_of_work.py
app/core/events/: __init__.py
app/core/interfaces/: __init__.py  event_bus.py  repository.py  service.py  unit_of_work.py
app/domain/: __init__.py
app/domain/message/: __init__.py  handlers.py  queries.py  services.py
app/domain/payment/: __init__.py  handlers.py  keyboards.py  messages.py  queries.py  services.py
app/domain/personality/: __init__.py  prompts.py
app/domain/quiz/: callbacks.py  fsm.py  handlers.py  helpers.py  keyboards.py  messages.py
app/domain/subscription/: __init__.py  handlers.py  keyboards.py  messages.py  queries.py  services.py
app/domain/user/: callbacks.py  constants.py  decorators.py  handlers.py  keyboards.py  messages.py  queries.py  services.py  services_cached.py
app/examples/: optimized_callbacks.py
app/handlers/: __init__.py  handlers.py
app/services/: __init__.py  pool.py
app/shared/: helpers.py
app/tests/: architectural_tests.py  security_tests.py
documentation/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BOT_COMMANDS_CONFIGURATION_ANALYSIS.md  BUTTON_CHANGES_REPORT.md  BUTTON_TRANSLATIONS_FIX.md  CALLBACK_CONSTANTS_OPTIMIZATION.md  CHECK_MESSAGES_COMMAND.md  CODE_IMPROVEMENTS_REPORT.md  COMPREHENSIVE_AUDIT_REPORT_2024.md  COMPREHENSIVE_FUNCTIONALITY_REPORT.md  COMPREHENSIVE_PROJECT_AUDIT.md  COMPREHENSIVE_PROJECT_AUDIT_2024.md  DAILY_RESET_TASK.md  DATABASE_STATUS_REPORT.md  DATETIME_DEPRECATION_FIX.md  DEBUG_INFO_MODULE.md  DELETE_ME_COMMAND_ANALYSIS.md  DELETE_ME_COMMAND_UPDATE.md  DELETE_ME_RETURN_TEXT_UPDATE.md  ENHANCED_METRICS.md  FINAL_COMPREHENSIVE_AUDIT_REPORT.md  FINAL_OPTIMIZATION_REPORT.md  FIX_INSTRUCTIONS.md  FROZEN_INSTANCE_FIX.md  FSM_CACHING_GUIDE.md  GENDER_BUTTONS_SHORTENING_REPORT.md  GENDER_CHANGE_FIX.md  GENDER_NAMES_LOCALIZATION_FIX.md  HARDCODE_CLEANUP_REPORT.md  IMPROVEMENT_ROADMAP.md  LANGUAGE_COMMAND_GUIDE.md  LANGUAGE_FIX_FINAL.md  LANGUAGE_PERSISTENCE_FIX.md  LANGUAGE_SELECTION_DELAY_ANALYSIS.md  LANGUAGE_SELECTION_IMPROVEMENT.md  LOCALIZATION_FIX.md  LOCALIZATION_GUIDE.md  MARKDOWN_FIX.md  MESSAGE_DEBUG_INTEGRATION.md  MESSAGE_HANDLERS_OPTIMIZATION_REPORT.md  (+37 more)
examples/: debug_info_usage.py  persona_debug_usage.py
git_hooks/: pre-commit
locales/: README.md
locales/de/: translations.json
locales/en/: translations.json
locales/es/: translations.json
locales/fr/: translations.json
locales/it/: translations.json
locales/pl/: translations.json
locales/ru/: translations.json
locales/sr/: translations.json
locales/tr/: translations.json
persons/: persons-en.json  persons.json  persons.py
scripts/: README.md  analyze_unused_imports.py  check_network.py  init_user_languages.py  monitor_connection.py  optimize_network.py
scripts/diagnostic/: check_user_diagnostic.py
scripts/maintenance/: check_gender_buttons.py  check_premium_promo.py  check_premium_promo_emoji.py  check_reset_info_emoji.py  check_stop_translations.py  check_translations.py  clean_metrics.py  clear_cache_fix_premium.py  clear_user_cache.py  clear_user_cache_force.py  fix_premium_db.py  fix_premium_subscription.py  restart_bot.py
scripts/security/: stop_list.py
scripts/shared/: database_utils.py  translation_checker.py
(+79 files in other folders)
