[tool.black]
line-length = 127
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
  | venv
  | __pycache__
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 127
known_first_party = ["app", "core", "handlers"]


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poe.tasks]
# Основные команды
run = "python app/main.py"
install = "pip install -r requirements.txt"
dev-install = "pip install -r requirements-dev.txt"
update = "pip install --upgrade -r requirements.txt"
venv = "python -m venv venv"

# Форматирование кода
format = "python -m black ."
isort = "python -m isort ."

# Линтинг
lint = "python -m flake8 . --max-line-length=127 --ignore=E501"
quick-lint = "python -m flake8 . --select=E9,F63,F7,F82 --exit-zero"

# Очистка
clean = "find . -name '*.pyc' -delete && find . -name '__pycache__' -exec rm -rf {} +"

# Составные задачи
setup = { sequence = ["install", "run"] }
full-check = { sequence = ["format", "isort"] }
restart = { sequence = ["clean", "run"] }
